--- a/index.html
+++ b/index.html
@@ -332,17 +332,6 @@
               EV
             </a>
           </li>
-          <li class="nav-item">
-            <a
-              href="#bigbike"
-              class="nav-link text-light h4"
-              data-bs-toggle="tab"
-              role="tab"
-            >
-              <i class="fi-user me-2"></i>
-              BigBike
-            </a>
-          </li>
         </ul>
 
         <!-- Tabs content -->
@@ -355,7 +344,7 @@
                   <img src="images/Beat.webp" alt="BeAT" class="product-img" />
                   <h5 class="product-title">BeAT</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 18,850,000</div>
+                  <div class="price">Rp. 18.975.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -370,7 +359,7 @@
                   />
                   <h5 class="product-title">BeAT Street</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 19,715,000</div>
+                  <div class="price">Rp. 20.100.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -385,7 +374,7 @@
                   />
                   <h5 class="product-title">Genio</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 20,025,000</div>
+                  <div class="price">Rp. 20.325.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -400,7 +389,7 @@
                   />
                   <h5 class="product-title">Scoopy</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 22,676,000</div>
+                  <div class="price">Rp. 23.250.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -416,7 +405,7 @@
                   <span class="new-badge">New!</span>
                   <h5 class="product-title">Vario 125</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 23,870,000</div>
+                  <div class="price">Rp. 23.925.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -431,7 +420,7 @@
                   />
                   <h5 class="product-title">Vario 160</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 26,040,000</div>
+                  <div class="price">Rp. 28.225.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -447,7 +436,7 @@
                   <span class="new-badge">New!</span>
                   <h5 class="product-title">Stylo 160</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 28,845,000</div>
+                  <div class="price">Rp. 29.000.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -462,7 +451,7 @@
                   />
                   <h5 class="product-title">PCX 160</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 34,760,000</div>
+                  <div class="price">Rp. 33.500.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -477,7 +466,7 @@
                   />
                   <h5 class="product-title">ADV 160</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 37,253,000</div>
+                  <div class="price">Rp. 36.600.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -492,7 +481,7 @@
                   />
                   <h5 class="product-title">Forza</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 81,064,000</div>
+                  <div class="price">Rp. 90.900.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -500,150 +489,176 @@
           </div>
           <div class="tab-pane fade" id="sport" role="tabpanel">
             <div class="row">
-              <!-- BeAT -->
+              <!-- First Row -->
+              <!-- CB150 Verza -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
-                  <img src="images/Beat.webp" alt="BeAT" class="product-img" />
-                  <h5 class="product-title">BeAT</h5>
+                  <img
+                    src="images/cb150.webp"
+                    alt="CB150 Verza"
+                    class="product-img"
+                  />
+                  <h5 class="product-title">CB150 Verza</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 18,850,000</div>
+                  <div class="price">Rp. 23.725.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- BeAT Street -->
+              <!-- Sonic 150R -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/Beat Street.webp"
-                    alt="BeAT Street"
+                    src="images/Sonic 150R.webp"
+                    alt="Sonic 150R"
                     class="product-img"
                   />
-                  <h5 class="product-title">BeAT Street</h5>
+                  <h5 class="product-title">Sonic 150R</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 19,715,000</div>
+                  <div class="price">Rp. 28.000.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- Genio -->
+              <!-- CB150R Streetfire -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/Genio.webp"
-                    alt="Genio"
+                    src="images/CB150R Streetfire.webp"
+                    alt="CB150R Streetfire"
                     class="product-img"
                   />
-                  <h5 class="product-title">Genio</h5>
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">CB150R Streetfire</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 20,025,000</div>
+                  <div class="price">Rp. 32.025.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- Scoopy -->
+              <!-- Second Row -->
+              <!-- CB150X -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/Scoopy.webp"
-                    alt="Scoopy"
+                    src="images/CB150X.webp"
+                    alt="CB150X"
                     class="product-img"
                   />
-                  <h5 class="product-title">Scoopy</h5>
+                  <h5 class="product-title">CB150X</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 22,676,000</div>
+                  <div class="price">Rp. 34.550.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- Vario 125 -->
+              <!-- CRF150L -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/vario125.webp"
-                    alt="Vario 125"
+                    src="images/crf150l.webp"
+                    alt="CRF150L"
                     class="product-img"
                   />
-                  <span class="new-badge">New!</span>
-                  <h5 class="product-title">Vario 125</h5>
+                  <h5 class="product-title">CRF150L</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 23,870,000</div>
+                  <div class="price">Rp. 37.125.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- Vario 160 -->
+              <!-- CBR150R -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/vario160.webp"
-                    alt="Vario 160"
+                    src="images/cbr150r.webp
+                    "
+                    alt="CBR150R"
                     class="product-img"
                   />
-                  <h5 class="product-title">Vario 160</h5>
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">CBR150R</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 26,040,000</div>
+                  <div class="price">Rp. 38.475.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- SH150i -->
+              <!-- Third Row -->
+              <!-- CBR250RR -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/stylo160.webp"
-                    alt="SH150i"
+                    src="images/cbr250rr.webp"
+                    alt="CBR250RR"
                     class="product-img"
                   />
-                  <span class="new-badge">New!</span>
-                  <h5 class="product-title">Stylo 160</h5>
+                  <h5 class="product-title">CBR250RR</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 28,845,000</div>
+                  <div class="price">Rp. 66.400.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- PCX 160 -->
+              <!-- CRF250L -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/pcx160.webp"
-                    alt="PCX 160"
+                    src="images/crf250l.webp"
+                    alt="CRF250L"
                     class="product-img"
                   />
-                  <h5 class="product-title">PCX 160</h5>
+                  <h5 class="product-title">CRF250L</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 34,760,000</div>
+                  <div class="price">Rp. 80.125.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- ADV 160 -->
+              <!-- ST125 Dax -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/adv160.webp"
-                    alt="ADV 160"
+                    src="images/sti25dax.webp"
+                    alt="ST125 Dax"
                     class="product-img"
                   />
-                  <h5 class="product-title">ADV 160</h5>
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">ST125 Dax</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 37,253,000</div>
+                  <div class="price">Rp. 82.175.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
 
-              <!-- Forza -->
+              <!-- Fourth Row -->
+              <!-- Monkey -->
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/forza.webp"
-                    alt="Forza"
+                    src="images/monkey.webp"
+                    alt="Monkey"
                     class="product-img"
                   />
-                  <h5 class="product-title">Forza</h5>
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">Monkey</h5>
                   <div class="text-muted small">Harga Mulai</div>
-                  <div class="price">Rp. 81,064,000</div>
+                  <div class="price">Rp. 87.200.000</div>
+                  <button class="detail-btn">Selengkapnya</button>
+                </div>
+              </div>
+
+              <!-- CRF250 RALLY -->
+              <div class="col-md-3 col-sm-6 mb-4">
+                <div class="product-card position-relative">
+                  <img
+                    src="images/crf250rally.webp"
+                    alt="CRF250 RALLY"
+                    class="product-img"
+                  />
+                  <h5 class="product-title">CRF250 RALLY</h5>
+                  <div class="text-muted small">Harga Mulai</div>
+                  <div class="price">Rp. 93.953.000</div>
                   <button class="detail-btn">Selengkapnya</button>
                 </div>
               </div>
@@ -723,8 +738,57 @@
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="ev" role="tabpanel"></div>
-          <div class="tab-pane fade" id="bigbike" role="tabpanel"></div>
+          <div class="tab-pane fade" id="ev" role="tabpanel">
+            <!-- Electric Scooters Row -->
+            <div class="row">
+              <!-- ICON e: -->
+              <div class="col-md-4 col-sm-6 mb-4">
+                <div class="product-card position-relative">
+                  <img
+                    src="images/ICONe.webp"
+                    alt="ICON e:"
+                    class="product-img"
+                  />
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">ICON e:</h5>
+                  <div class="text-muted small">Harga Mulai</div>
+                  <div class="price">Rp. 28.000.000</div>
+                  <button class="detail-btn">Selengkapnya</button>
+                </div>
+              </div>
+
+              <!-- EM1 e: & EM1e: PLUS -->
+              <div class="col-md-4 col-sm-6 mb-4">
+                <div class="product-card position-relative">
+                  <img
+                    src="images/EM1.webp"
+                    alt="EM1 e: & EM1e: PLUS"
+                    class="product-img"
+                  />
+                  <h5 class="product-title">EM1 e: & EM1e: PLUS</h5>
+                  <div class="text-muted small">Harga Mulai</div>
+                  <div class="price">Rp. 40.000.000</div>
+                  <button class="detail-btn">Selengkapnya</button>
+                </div>
+              </div>
+
+              <!-- CUV e: & CUV e: RoadSync Duo -->
+              <div class="col-md-4 col-sm-6 mb-4">
+                <div class="product-card position-relative">
+                  <img
+                    src="images/CUV3.webp"
+                    alt="CUV e: & CUV e: RoadSync Duo"
+                    class="product-img"
+                  />
+                  <span class="new-badge">New !</span>
+                  <h5 class="product-title">CUV e: & CUV e: RoadSync Duo</h5>
+                  <div class="text-muted small">Harga Mulai</div>
+                  <div class="price">Rp. 54.450.000</div>
+                  <button class="detail-btn">Selengkapnya</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
