--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         </ul>
 
         <!-- Tabs content -->
-        <div class="tab-content">
+        <div class="tab-content pb-6">
           <div class="tab-pane fade show active" id="matic" role="tabpanel">
             <div class="row">
               <!-- BeAT -->
