--- a/index.html
+++ b/index.html
@@ -893,118 +893,159 @@
 
     <section class="gallery text-center">
       <div class="container-lg">
-        <div class="row gy-4 row-cols-2 row-cols-md-4">
-          <div class="col">
-            <img
-              src="images/materi1.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi2.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi3.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi4.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi5.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi6.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi7.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi8.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi9.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi10.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi11.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi12.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi13.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi14.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi15.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="images/materi16.webp"
-              class="gallery-item rounded-2"
-              alt="gallery"
-            />
+        <!-- Responsive carousel with multiple items -->
+        <div class="tns-carousel-wrapper">
+          <div
+            class="tns-carousel-inner"
+            data-carousel-options='{"items": 5, "controls": true, "responsive": {"0":{"items":1, "gutter": 16},"500":{"items":2, "gutter": 16},"768":{"items":4, "gutter": 16}, "1100":{"gutter": 24}}}'
+          >
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (1).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (2).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (3).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (4).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (5).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (6).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (7).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (8).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (9).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (10).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (11).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (12).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (13).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (14).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (15).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (16).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (17).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (18).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (19).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (20).jpeg"
+                alt="Image"
+              />
+            </div>
+            <div>
+              <img
+                class="rounded"
+                src="images/katalog motor (21).jpeg"
+                alt="Image"
+              />
+            </div>
           </div>
         </div>
         <div class="mt-4">
