--- a/index.html
+++ b/index.html
@@ -893,6 +893,7 @@
 
     <section class="gallery text-center">
       <div class="container-lg">
+        <h2 class="text-center text-dark mb-5">Pricelist Terbaru 2025</h2>
         <!-- Responsive carousel with multiple items -->
         <div class="tns-carousel-wrapper">
           <div
