--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
       </div>
     </section>
 
-    <section class="container pt-5">
+    <section class="container pt-lg-5 p-4">
       <!-- Related posts carousel -->
       <p class="h2 text-center">Subsection</p>
       <h3 class="h3 text-danger">Dealer Motor Honda Bandung</h3>
