--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card position-relative">
                   <img
-                    src="images/forza.webp"
+                    src="images/Forza.webp"
                     alt="Forza"
                     class="product-img"
                   />
@@ -898,7 +898,8 @@
         <div class="tns-carousel-wrapper">
           <div
             class="tns-carousel-inner"
-            data-carousel-options='{"items": 5, "controls": true, "responsive": {"0":{"items":1, "gutter": 16},"500":{"items":2, "gutter": 16},"768":{"items":4, "gutter": 16}, "1100":{"gutter": 24}}}'
+            data-carousel-options='{"items": 5, "controls": true,   "autoplay": true,
+            "autoplayTimeout": 3000, "responsive": {"0":{"items":1, "gutter": 16},"500":{"items":2, "gutter": 16},"768":{"items":3, "gutter": 16}, "1100":{"gutter": 24}}}'
           >
             <div>
               <img
